[package]
name = "machete"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
tempfile = "3.2.0"
clap = { version = "3.0.0-beta.5", features = ["yaml"] }
fs_extra = "1.2.0"
serde_json = "1.0"
